@@ -1,5 +1,10 @@
 2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/builtins.c (CMD_WindowShade):
+	fixes for animated shading w/ titleatbottom+north and titleattop+south
+
+2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
 	* fvwm/move_resize.c (moveLoop):
 	(resize_window):
 	* fvwm/virtual.c (HandlePaging):
